fixed z-index

--- a/css/style.css
+++ b/css/style.css
@@ -103,8 +103,7 @@ main {
   padding: 30px;
   margin-top: 10px;
   background-color: rgba(0, 0, 0, 0);
-  z-index: 10000;
-  isolation: isolate;
+  
 }
 
 #intro, #beatsIntro, #photoIntro, #designIntro, #albumsIntro {
@@ -121,8 +120,6 @@ main {
   padding: 30px;
   margin-top: 10px;
   background-color: rgba(0, 0, 0, 0);
-  z-index: 10000;
-  isolation: isolate;
   
 }
 
